--- a/plugins/moobile/program.html
+++ b/plugins/moobile/program.html
@@ -1,3 +1,6 @@
 <div class="content-index">
-<p>Some custom html here</p>
+<center>
+  <h3>Build Custom Pages</h3>
+  <p>To do all things neccessary for training and testing.</p>
+</center>
 </div>
